fix(spigot): spigot integration test